Update achievements.html 11

--- a/achievements.html
+++ b/achievements.html
@@ -141,8 +141,7 @@
           including SAP Business AI Core and production-ready AI workflows.
         </p>
         <img src="Achievements/sap-generative-ai-developer-badge.png" alt="SAP Generative AI Developer" />
-        <a class="pdf-link"
-           href="certificate-viewer.html?file=Achievements/sap-generative-ai-developer-certificate.pdf">
+        <a class="pdf-link" href="Achievements/sap-generative-ai-developer-certificate.pdf">
           View certificate (PDF)
         </a>
       </div>
@@ -159,8 +158,7 @@
           responsible AI practices, and real-world applications.
         </p>
         <img src="Achievements/ibm-getting-started-generative-ai-badge.png" alt="IBM Generative AI" />
-        <a class="pdf-link"
-           href="certificate-viewer.html?file=Achievements/ibm-getting-started-generative-ai-certificate.pdf">
+        <a class="pdf-link" href="Achievements/ibm-getting-started-generative-ai-certificate.pdf">
           View certificate (PDF)
         </a>
       </div>
@@ -172,8 +170,7 @@
           generation using real-world business scenarios.
         </p>
         <img src="Achievements/forage-tata-genai-data-analytics-certificate.png" alt="Forage Tata GenAI" />
-        <a class="pdf-link"
-           href="certificate-viewer.html?file=Achievements/forage-tata-genai-data-analytics-certificate.pdf">
+        <a class="pdf-link" href="Achievements/forage-tata-genai-data-analytics-certificate.pdf">
           View certificate (PDF)
         </a>
       </div>
@@ -185,8 +182,7 @@
           across structured business cases.
         </p>
         <img src="Achievements/forage-bcgx-genai-certificate.png" alt="BCG X GenAI" />
-        <a class="pdf-link"
-           href="certificate-viewer.html?file=Achievements/forage-bcgx-genai-certificate.pdf">
+        <a class="pdf-link" href="Achievements/forage-bcgx-genai-certificate.pdf">
           View certificate (PDF)
         </a>
       </div>
@@ -198,8 +194,7 @@
           and analytical modeling techniques.
         </p>
         <img src="Achievements/forage-british-airways-data-science-certificate.png" alt="British Airways DS" />
-        <a class="pdf-link"
-           href="certificate-viewer.html?file=Achievements/forage-british-airways-data-science-certificate.pdf">
+        <a class="pdf-link" href="Achievements/forage-british-airways-data-science-certificate.pdf">
           View certificate (PDF)
         </a>
       </div>
@@ -211,8 +206,7 @@
           enterprise environments.
         </p>
         <img src="Achievements/forage-siemens-mobility-project-management-certificate.png" alt="Siemens Mobility PM" />
-        <a class="pdf-link"
-           href="certificate-viewer.html?file=Achievements/forage-siemens-mobility-project-management-certificate.pdf">
+        <a class="pdf-link" href="Achievements/forage-siemens-mobility-project-management-certificate.pdf">
           View certificate (PDF)
         </a>
       </div>
@@ -224,8 +218,7 @@
           stakeholder coordination and delivery planning.
         </p>
         <img src="Achievements/forage-cbre-project-management-certificate.png" alt="CBRE PM" />
-        <a class="pdf-link"
-           href="certificate-viewer.html?file=Achievements/forage-cbre-project-management-certificate.pdf">
+        <a class="pdf-link" href="Achievements/forage-cbre-project-management-certificate.pdf">
           View certificate (PDF)
         </a>
       </div>
@@ -237,8 +230,7 @@
           solving, design thinking, and implementation.
         </p>
         <img src="Achievements/hackerrank-software-engineer-certificate.png" alt="HackerRank SE" />
-        <a class="pdf-link"
-           href="certificate-viewer.html?file=Achievements/hackerrank-software-engineer-certificate.pdf">
+        <a class="pdf-link" href="Achievements/hackerrank-software-engineer-certificate.pdf">
           View certificate (PDF)
         </a>
       </div>
@@ -250,8 +242,7 @@
           structures, control flow, and basic algorithms.
         </p>
         <img src="Achievements/hackerrank-python-basic-certificate.png" alt="HackerRank Python" />
-        <a class="pdf-link"
-           href="certificate-viewer.html?file=Achievements/hackerrank-python-basic-certificate.pdf">
+        <a class="pdf-link" href="Achievements/hackerrank-python-basic-certificate.pdf">
           View certificate (PDF)
         </a>
       </div>
@@ -268,8 +259,7 @@
           applications in modern natural language processing systems.
         </p>
         <img src="Achievements/nvidia-transformer-nlp-certificate.png" alt="NVIDIA Transformer NLP" />
-        <a class="pdf-link"
-           href="certificate-viewer.html?file=Achievements/nvidia-transformer-nlp-certificate.pdf">
+        <a class="pdf-link" href="Achievements/nvidia-transformer-nlp-certificate.pdf">
           View certificate (PDF)
         </a>
       </div>
