Update contact.html 1

--- a/contact.html
+++ b/contact.html
@@ -94,6 +94,13 @@
         padding: 32px 24px;
       }
     }
+    /* FORCE readable sentence case on Contact page */
+      .contact-page,
+      .contact-page * {
+        text-transform: none !important;
+        letter-spacing: normal !important;
+      }
+
   </style>
 </head>
 
