--- a/contact.html
+++ b/contact.html
@@ -50,26 +50,26 @@
       margin-bottom: 32px;
     }
 
-    .contact-item:last-child {
-      margin-bottom: 0;
-    }
-
     .contact-label {
       font-size: 14px;
       color: #777;
       margin-bottom: 10px;
       letter-spacing: 1px;
       text-transform: uppercase;
+      font-family: "Cinzel", serif;
     }
 
-    /* FIX: readable Aa-style links */
-    .contact-link {
+    /* ✅ FIX: readable Aa-style text */
+    .contact-link,
+    .contact-note {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont,
+                   "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       font-size: 18px;
       color: #111;
       text-decoration: none;
-      font-weight: 500;
       letter-spacing: normal;
       text-transform: none;
+      font-weight: 500;
       word-break: break-word;
     }
 
@@ -77,12 +77,12 @@
       text-decoration: underline;
     }
 
-    /* FIX: clearer, lighter paragraph */
     .contact-note {
       margin-top: 40px;
       font-size: 15px;
-      color: #333;
       line-height: 1.6;
+      color: #333;
+      font-weight: 400;
     }
 
     @media (max-width: 768px) {
@@ -94,13 +94,6 @@
         padding: 32px 24px;
       }
     }
-    /* FORCE readable sentence case on Contact page */
-      .contact-page,
-      .contact-page * {
-        text-transform: none !important;
-        letter-spacing: normal !important;
-      }
-
   </style>
 </head>
 
