--- a/achievements.html
+++ b/achievements.html
@@ -33,6 +33,7 @@
       text-align: center;
     }
 
+    /* Main heading — keep Cinzel */
     h1 {
       font-family: "Cinzel", serif;
       font-size: 36px;
@@ -44,6 +45,7 @@
       margin-bottom: 96px;
     }
 
+    /* Month heading — keep Cinzel */
     .month-title {
       font-family: "Cinzel", serif;
       font-size: 22px;
@@ -60,6 +62,16 @@
       box-shadow: 0 10px 30px rgba(0,0,0,0.08);
     }
 
+    /* ✅ FIX: readable font inside cards */
+    .achievement-card h3,
+    .achievement-card p,
+    .achievement-card .pdf-link {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont,
+                   "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      text-transform: none;
+      letter-spacing: normal;
+    }
+
     .achievement-card h3 {
       margin-top: 0;
       font-size: 18px;
@@ -72,6 +84,7 @@
       color: #333;
       line-height: 1.6;
       margin: 12px 0 20px;
+      font-weight: 400;
     }
 
     .achievement-card img {
@@ -81,16 +94,16 @@
       margin-bottom: 16px;
     }
 
-    /* PDF link: visible on laptop only */
+    /* PDF link — laptop only */
     .pdf-link {
       display: inline-block;
       margin-top: 8px;
       font-size: 14px;
       color: #6b5ca5;
       text-decoration: underline;
+      font-weight: 500;
     }
 
-    /* Hide PDF link on phone & tablet */
     @media (max-width: 1023px) {
       .pdf-link {
         display: none;
