--- a/about.html
+++ b/about.html
@@ -74,13 +74,22 @@
       });
 
       // Typewriter (fast)
-      const text = `Hello, my name is Kavitha.
+      const text = `Hello there 👋
 
-I am a Junior AI Engineer working at the intersection of
-software engineering, large language models, and evaluation systems.
+        I’m Kavitha Lingarajegowda.
 
-I build reliable AI systems — and I enjoy doing
-difficult things properly.`;
+        I hold a Bachelor’s degree in Computer Science and Engineering.
+
+        I am currently completing my Master’s thesis.
+
+        I will graduate with a Master’s degree in Automotive Software Engineering.
+
+        My focus areas include:
+          • Artificial Intelligence
+          • Machine Learning
+          • Large Language Models
+          • AI Evaluation Systems`;
+
 
       const target = document.getElementById("typewriter");
       let i = 0;
