--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
       });
 
       // Typewriter (fast)
-      const text = `Hello there 👋
+      const text = `Hello there 🙋🏼‍♀️
 
 I’m Kavitha Lingarajegowda.
 
