--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@ My focus areas include:
     • Artificial Intelligence
     • Machine Learning
     • Large Language Models
-    • AI Evaluation Systems`;
+    • AI Evaluation Systems`.trimStart();
 
 
       const target = document.getElementById("typewriter");
