--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,14 @@
       text-align: center;
     }
 
+    /* Page heading (outside card) */
+    h1 {
+      font-family: "Cinzel", serif;
+      font-size: 36px;
+      margin-bottom: 72px;
+      color: #6b5ca5;
+    }
+
     .portfolio-card {
       max-width: 640px;
       margin: 0 auto;
@@ -22,13 +30,6 @@
       background: #ffffff;
       border-radius: 18px;
       box-shadow: 0 14px 36px rgba(0,0,0,0.1);
-    }
-
-    .portfolio-card h1 {
-      font-family: "Cinzel", serif;
-      font-size: 34px;
-      color: #6b5ca5;
-      margin-bottom: 28px;
     }
 
     .portfolio-card p {
@@ -71,9 +72,9 @@
   </nav>
 
   <main class="portfolio-page">
-    <div class="portfolio-card">
-      <h1>Portfolio</h1>
+    <h1>Portfolio</h1>
 
+    <div class="portfolio-card">
       <p>
         I am currently building and refining projects focused on
         Artificial Intelligence, Machine Learning, and Generative AI systems.
