--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <div class="hero-content">
         <h1>Kavitha Lingarajegowda</h1>
-        <p>Automotive Software Engineer · LLMs · Evaluation Systems</p>
+        <p>AI Engineer · Machine Learning · Generative AI Systems</p>
         <a href="about.html" class="cta">About me</a>
       </div>
     </main>
