--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
       // Typewriter (fast)
       const text = `Hello there 🙋🏼‍♀️
 
-I’m Kavitha Lingarajegowda.
+I’m Kavitha,
 
 I hold a Bachelor’s degree in Computer Science and Engineering.
 
