--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
   </style>
 </head>
 
-<body>
+<body class="portfolio-page">
 
   <!-- Mobile nav -->
   <button class="hamburger" id="hamburger">☰</button>
