--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
   </style>
 </head>
 
-<body>
+<body class="contact-page">
 
   <!-- Mobile hamburger -->
   <button class="hamburger" id="hamburger">☰</button>
