--- a/portfolio.html
+++ b/portfolio.html
@@ -237,7 +237,7 @@
       </ul>
 
       <p>
-        <a href="YOUR_HF_SPACE_LINK_HERE" target="_blank" rel="noopener noreferrer">
+        <a href="https://huggingface.co/spaces/KavithaL4/rag-web-data-demo-1" target="_blank" rel="noopener noreferrer">
           Live Demo (Hugging Face Space)
         </a>
       </p>
