--- a/index.html
+++ b/index.html
@@ -20,24 +20,48 @@
     </aside>
 
     <nav class="desktop-nav">
-      <a href="index.html">Home</a>
-      <a href="resume.html">Resume</a>
-      <a href="portfolio.html">Portfolio</a>
-      <a href="achievements.html">Achievements</a>
-      <a href="contact.html">Contact</a>
+      <div class="nav-left">
+        <span class="nav-name">Kavitha Lingarajegowda</span>
+        <span class="nav-role">Software & AI Engineer</span>
+      </div>
+
+      <div class="nav-right">
+        <a href="index.html">Home</a>
+        <a href="resume.html">Resume</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="achievements.html">Achievements</a>
+        <a href="contact.html">Contact</a>
+      </div>
     </nav>
 
     <main class="hero">
+      <div class="hero-content">
+        <span class="hero-badge">Open to 2026 New Grad & Early Career Roles</span>
+
+        <h1>Kavitha Lingarajegowda</h1>
+
+        <h2 class="hero-role">
+          Software Engineer · AI / ML · Generative Systems · Automation
+        </h2>
+
+        <p class="hero-description">
+          I build reliable, scalable systems and AI-driven applications that turn
+          complex ideas into real-world impact.
+        </p>
+
+        <a href="contact.html" class="cta">Get in Touch</a>
+
+        <div class="hero-socials">
+          <a href="https://github.com/kav-gowda" target="_blank">GitHub</a>
+          <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+        </div>
+      </div>
+
       <div class="hero-image">
         <img src="profile-cutout.png" alt="Kavitha Lingarajegowda" />
       </div>
-
-      <div class="hero-content">
-        <h1>Kavitha Lingarajegowda</h1>
-        <p>AI Engineer · Machine Learning · Generative AI Systems</p>
-        <a href="about.html" class="cta">About me</a>
-      </div>
     </main>
+
 
     <script>
       const hamburger = document.getElementById("hamburger");
