--- a/achievements.html
+++ b/achievements.html
@@ -133,12 +133,24 @@
   </aside>
 
   <nav class="desktop-nav">
-    <a href="index.html">Home</a>
-    <a href="resume.html">Resume</a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="achievements.html">Achievements</a>
-    <a href="contact.html">Contact</a>
+    <div class="nav-inner">
+
+      <div class="nav-left">
+        <span class="nav-name">Kavitha Lingarajegowda</span>
+        <span class="nav-role">Software & AI Engineer</span>
+      </div>
+
+      <div class="nav-right">
+        <a href="index.html">Home</a>
+        <a href="resume.html">Resume</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="achievements.html">Achievements</a>
+        <a href="contact.html">Contact</a>
+      </div>
+
+    </div>
   </nav>
+
 
   <main class="achievements-page">
     <h1>Achievements</h1>
