--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <aside class="mobile-menu" id="mobileMenu">
       <button class="close" id="closeMenu">×</button>
       <a href="index.html">Home</a>
-      <a href="resume.html">Resume</a>
+      <a href="resume.html">Experience</a>
       <a href="portfolio.html">Portfolio</a>
       <a href="achievements.html">Achievements</a>
       <a href="contact.html">Contact</a>
