--- a/portfolio.html
+++ b/portfolio.html
@@ -124,11 +124,13 @@
 
       <div class="nav-right">
         <a href="index.html">Home</a>
-        <a href="resume.html">Resume</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="achievements.html">Achievements</a>
-        <a href="contact.html">Contact</a>
+        <a href="skills.html">Skills</a>
+        <a href="portfolio.html">Projects</a>
+        <a href="achievements.html">Certifications</a>
+        <a href="resume.html">Experience</a>
+        <a href="education.html">Education</a>
       </div>
+
 
     </div>
   </nav>
