--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <aside class="mobile-menu" id="mobileMenu">
       <button class="close" id="closeMenu">×</button>
       <a href="index.html">Home</a>
+      <a href="skills.html">Skills</a>
+      <a href="portfolio.html">Projects</a>
+      <a href="achievements.html">Certifications</a>
       <a href="resume.html">Experience</a>
-      <a href="portfolio.html">Portfolio</a>
-      <a href="achievements.html">Achievements</a>
-      <a href="contact.html">Contact</a>
+      <a href="education.html">Education</a>
     </aside>
+
 
     <nav class="desktop-nav">
       <div class="nav-inner">
