--- a/skills.html
+++ b/skills.html
@@ -28,15 +28,15 @@
        ========================= */
 
     .skills-header h1 {
-      font-size: 42px;
-      color: #ffffff;
-      margin-bottom: 12px;
+      font-size: 40px;
+      color: #000000;
+      margin-bottom: 10px;
     }
 
     .skills-header p {
-      font-size: 16px;
-      color: rgba(255, 255, 255, 0.75);
-      margin-bottom: 64px;
+      font-size: 15px;
+      color: #444444;
+      margin-bottom: 56px;
       max-width: 560px;
     }
 
@@ -51,39 +51,31 @@
     }
 
     .skill-card {
-      background: rgba(20, 18, 32, 0.85);
+      background: rgba(255, 255, 255, 0.85);
       border-radius: 18px;
-      padding: 32px 36px;
-      box-shadow: 0 25px 60px rgba(0, 0, 0, 0.35);
+      padding: 28px 32px;
+      border: 1px solid rgba(91, 75, 138, 0.18);
+      box-shadow: 0 14px 32px rgba(0, 0, 0, 0.08);
     }
 
     .skill-card h2 {
-      font-size: 20px;
-      color: #ffffff;
-      margin-bottom: 18px;
-    }
-
-    .skill-card ul {
-      list-style: none;
-      padding-left: 0;
-    }
-
-    .skill-card li {
-      position: relative;
-      padding-left: 18px;
-      margin-bottom: 12px;
-      font-size: 15px;
-      line-height: 1.6;
-      color: rgba(255, 255, 255, 0.85);
-    }
-
-    .skill-card li::before {
-      content: "•";
-      position: absolute;
-      left: 0;
-      color: #7b6cff;
       font-size: 18px;
-      line-height: 1;
+      color: #4a3b78;
+      margin-bottom: 14px;
+      font-weight: 600;
+    }
+
+    .skill-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px 16px;
+    }
+
+    .skill-item {
+      font-size: 14px;
+      color: #000000;
+      padding: 4px 0;
+      white-space: nowrap;
     }
 
     /* =========================
@@ -96,7 +88,7 @@
       }
 
       .skills-header h1 {
-        font-size: 30px;
+        font-size: 28px;
       }
 
       .skills-grid {
@@ -105,7 +97,7 @@
       }
 
       .skill-card {
-        padding: 26px 24px;
+        padding: 24px 22px;
       }
     }
   </style>
@@ -129,7 +121,6 @@
   <!-- Desktop nav -->
   <nav class="desktop-nav">
     <div class="nav-inner">
-
       <div class="nav-left">
         <span class="nav-name">Kavitha Lingarajegowda</span>
         <span class="nav-role">Software & AI Engineer</span>
@@ -143,7 +134,6 @@
         <a href="resume.html">Experience</a>
         <a href="education.html">Education</a>
       </div>
-
     </div>
   </nav>
 
@@ -156,8 +146,7 @@
     <header class="skills-header">
       <h1>Technical Strengths</h1>
       <p>
-        A balanced skill set spanning software engineering fundamentals,
-        applied AI systems, and production-oriented machine learning workflows.
+        A concise overview of my core technical skills, optimized for quick scanning.
       </p>
     </header>
 
@@ -165,44 +154,56 @@
 
       <div class="skill-card">
         <h2>Core Software Engineering</h2>
-        <ul>
-          <li>Python programming for production and research workflows</li>
-          <li>Backend debugging, stabilization, and reliability improvements</li>
-          <li>API-driven systems and data processing pipelines</li>
-          <li>ETL workflow design and structured data preparation</li>
-          <li>Agile development practices, testing, and documentation</li>
-        </ul>
+        <div class="skill-list">
+          <span class="skill-item">Python</span>
+          <span class="skill-item">SQL</span>
+          <span class="skill-item">Backend Debugging</span>
+          <span class="skill-item">API-Based Systems</span>
+          <span class="skill-item">ETL Pipelines</span>
+          <span class="skill-item">Data Processing</span>
+          <span class="skill-item">Agile Development</span>
+          <span class="skill-item">Testing</span>
+          <span class="skill-item">Documentation</span>
+        </div>
       </div>
 
       <div class="skill-card">
         <h2>AI & Machine Learning</h2>
-        <ul>
-          <li>Machine Learning fundamentals and applied NLP</li>
-          <li>PyTorch-based model development and experimentation</li>
-          <li>Feature engineering and data preprocessing</li>
-          <li>Model evaluation, benchmarking, and error analysis</li>
-        </ul>
+        <div class="skill-list">
+          <span class="skill-item">Machine Learning</span>
+          <span class="skill-item">NLP</span>
+          <span class="skill-item">PyTorch</span>
+          <span class="skill-item">Feature Engineering</span>
+          <span class="skill-item">Data Preprocessing</span>
+          <span class="skill-item">Model Evaluation</span>
+          <span class="skill-item">Error Analysis</span>
+        </div>
       </div>
 
       <div class="skill-card">
-        <h2>Generative AI & LLM Systems</h2>
-        <ul>
-          <li>Large Language Models (LLMs) and applied research workflows</li>
-          <li>Prompt engineering for evaluation and feedback tasks</li>
-          <li>Retrieval-Augmented Generation (RAG) pipelines</li>
-          <li>Agent-driven and deterministic evaluation workflows</li>
-          <li>LLM behavior analysis and failure-mode investigation</li>
-        </ul>
+        <h2>Generative AI & LLMs</h2>
+        <div class="skill-list">
+          <span class="skill-item">Large Language Models</span>
+          <span class="skill-item">Prompt Engineering</span>
+          <span class="skill-item">RAG</span>
+          <span class="skill-item">AI Agents</span>
+          <span class="skill-item">Deterministic Pipelines</span>
+          <span class="skill-item">LLM Evaluation</span>
+        </div>
       </div>
 
       <div class="skill-card">
         <h2>Data, MLOps & Platforms</h2>
-        <ul>
-          <li>End-to-end data and model pipelines</li>
-          <li>Experiment tracking, monitoring, and CI/CD support</li>
-          <li>Cloud platforms: AWS, Azure, GCP</li>
-          <li>Developer tools: Git, Hugging Face, LangChain</li>
-        </ul>
+        <div class="skill-list">
+          <span class="skill-item">AWS</span>
+          <span class="skill-item">Azure</span>
+          <span class="skill-item">GCP</span>
+          <span class="skill-item">CI/CD</span>
+          <span class="skill-item">Monitoring</span>
+          <span class="skill-item">Git</span>
+          <span class="skill-item">Hugging Face</span>
+          <span class="skill-item">LangChain</span>
+        </div>
       </div>
 
     </section>
@@ -240,4 +241,3 @@
 
 </body>
 </html>
-
